fix: FE page wrapup

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -241,7 +241,7 @@
 }
 
 .card-img-add {
-  height: 220px;
+  height: 210px;
   padding: 20px 30px 20px 30px;
 
   background-color: rgba(0, 0, 0, 0.2);
@@ -256,9 +256,9 @@
 }
 
 .bookmark-card {
-  margin-left: 1rem;
+  /* margin-left: 1rem;
   margin-right: 1rem;
-  margin-bottom: 10px;
+  margin-bottom: 10px; */
 }
 
 .bookmark-card-header {
@@ -271,7 +271,6 @@
 }
 
 .bookmark-card-header-left {
-  margin-left: 10px;
   width: 50%;
 }
 
@@ -303,10 +302,30 @@
   padding-bottom: 0;
 
   margin-left: 2px;
+  /* width: 100%; */
+}
+
+.bookmark-card-header-left{
+  width: 50%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .bookmark-menu:hover {
   color: #d9b70d;
+}
+
+.bookmark-name-container{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.bookmark-menu-name{
+  /* overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; */
 }
 
 /* TILs Page */
@@ -492,6 +511,10 @@
   margin: 2vw 10vw 2vw 10vw;
 }
 
+.form-control-gpt{
+  height: 6rem;
+}
+
 #Text {
   min-height: 15rem;
 }
@@ -650,12 +673,14 @@
   text-decoration-line: none;
 }
 
-.pagination {
-  position: relative;
-  left: 50%;
+.page_nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+.page-item{
+  border: none;
 }
 
 /* Back to top */
